--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.7",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -10,7 +11,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "awesome-typescript-loader": "^5.2.1",
+    "axios": "^0.19.2",
     "react": "^16.13.1",
+    "react-docgen-typescript-loader": "^3.7.1",
+    "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
@@ -20,8 +25,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9009 -s public",
+    "storybook": "start-storybook -p 9001 -c .storybook",
+    
     "build-storybook": "build-storybook -s public"
+   
   },
   "eslintConfig": {
     "extends": "react-app"
