--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.7",
+    "@reduxjs/toolkit": "^1.3.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -11,13 +12,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.4",
     "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.19.2",
     "react": "^16.13.1",
-    "react-docgen-typescript-loader": "^3.7.1",
-    "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.0.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -26,9 +30,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9001 -c .storybook",
-    
     "build-storybook": "build-storybook -s public"
-   
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -50,6 +52,7 @@
     "@storybook/addon-links": "^5.3.17",
     "@storybook/addons": "^5.3.17",
     "@storybook/preset-create-react-app": "^2.1.1",
-    "@storybook/react": "^5.3.17"
+    "@storybook/react": "^5.3.17",
+    "@types/react-redux": "^7.1.7"
   }
 }
