--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "react-scripts": "3.4.1",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "use-position": "^0.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
